# sorting-nine-inputs-requires-twenty-five-comparisons

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  codecov.yaml
.github/workflows/: app.yml  macos.yml  ubuntu.yml  windows.yml
app/: CMakeLists.txt  settings.h
app/src/: BufferPool.h  GenerateAndPrune.cpp  GenerateAndPrune.h  Pool.h  main.cpp  persistentStorage.h  progress.h  settings.h
app/src/vendors/github.com/dabbertorres/ThreadPool/: ThreadPool.cpp  ThreadPool.h
benchmark/: graphs.py
benchmark/results/: README.md  metrics-cpp-n5-k9-threads8.json  metrics-cpp-n6-k12-threads8.json  metrics-cpp-n7-k16-threads8.json  metrics-cpp-n8-k19-threads8.json  metrics-cpp-n9-k9-threads8.json  metrics-prolog-n5-k9-threads8.json  metrics-prolog-n6-k12-threads8.json  metrics-prolog-n7-k16-threads8.json  metrics-prolog-n8-k19-threads8.json  metrics-prolog-n9-k9-threads8.json
cmake/: tools.cmake
include/sortnet/: BufferPool.h  GenerateAndPrune.h  Pool.h  bits.h  comparator.h  concepts.h  io.h  json.h  metric.h  permutation.h  persistentStorage.h  progress.h  sequence.h  util.h  z_environment.h
include/sortnet/networks/: Network.h  concept.h
include/sortnet/sets/: ListNaive.h  Metadata.h  concept.h
include/sortnet/vendors/github.com/dabbertorres/ThreadPool/: ThreadPool.cpp  ThreadPool.h
include/sortnet/vendors/github.com/haarcuba/cpp-text-table/: TextTable.h
include/sortnet/vendors/github.com/kimwalisch/libpopcnt/: libpopcnt.h
include/sortnet/vendors/github.com/nlohmann/json/: json.hpp
include/sortnet/vendors/github.com/prakhar1989/progress-cpp/: ProgressBar.hpp
src/: GenerateAndPrune.cpp  comparator.cpp  greeter.cpp  io.cpp  metric.cpp  permutation.cpp  persistentStorage.cpp  sequence.cpp  util.cpp
src/networks/: Network.cpp
src/sets/: ListNaive.cpp  Metadata.cpp
test/: CMakeLists.txt
test/src/: failedInclude.cpp  greeter.cpp  network.cpp  permutation.cpp  set.cpp  utilTest.h
